<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/whiteColor"
    android:layout_height="match_parent"
    tools:context=".activity.CreateTestSectionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/setting_TV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="M.C.Q"
            android:textColor="@color/gray_2"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/back_arrow_CV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_arrow_CV" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/back_arrow_CV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/light_grey_bg"
                android:visibility="visible" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/back_arrow"
                android:visibility="visible" />

        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:visibility="gone"
            android:id="@+id/timer_CV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/light_grey_bg"
                android:visibility="visible" />

            <TextView
                android:gravity="center"
                android:id="@+id/top_timer_TV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="00"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/nunito"
                android:textStyle="bold"
                android:textSize="25sp"/>


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/information_CL"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar">
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/date"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="22sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray_1"/>

        <TextView
            android:id="@+id/date_TV"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/date"
            android:text="05/05/2020"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="22sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray_1"/>


        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/totalTime_TV"
            android:text="@string/time"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="22sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray_1"/>

        <TextView
            android:id="@+id/totalTime_TV"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="55 Sec"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="22sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray_1"/>


        <TextView
            android:id="@+id/totalMarks"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/totalMarks"
            app:layout_constraintTop_toBottomOf="@id/date"
            android:textSize="22sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray_1"/>


        <TextView
            android:id="@+id/total_marks_TV"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/totalMarks"
            android:text="999"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toBottomOf="@id/date"
            android:textSize="22sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray_1"/>

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/totalTime_TV"
            android:text="@string/level"
            app:layout_constraintTop_toBottomOf="@id/date"
            android:textSize="22sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray_1"/>

        <TextView
            android:id="@+id/level_TV"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/level"
            android:text="5"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toBottomOf="@id/date"
            android:textSize="22sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray_1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/information_CL"
        android:layout_width="match_parent"
        tools:listitem="@layout/question_list_layout"
        android:id="@+id/question_list_RV"
        app:layout_constraintBottom_toTopOf="@id/button_LL"
        android:layout_height="0dp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/timer_center_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_LL"
        android:text="10"
        android:textSize="100sp"
        android:fontFamily="@font/nunito"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/button_LL"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="2">

        <Button
            android:visibility="visible"
            android:layout_weight="1"
            android:id="@+id/save_BT"
            style="@style/MatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/nunito"
            android:text="Save File"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="22sp"/>


        <Button
            android:layout_weight="1"
            android:visibility="visible"
            android:id="@+id/continue_BT"
            style="@style/MatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/nunito"
            android:text="Send Mail"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="22sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>